--- a/chatbot_app_lexart/frontend/package.json
+++ b/chatbot_app_lexart/frontend/package.json
@@ -15,14 +15,18 @@
     "@mui/material": "^5.14.6",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "prisma": "^5.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-csv": "^2.2.2",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "typescript": "^5.2.2"
   }
 }
