--- a/chatbot_app_lexart/backend/package.json
+++ b/chatbot_app_lexart/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
-    "@types/express": "^4.17.17"
+    "bcryptjs": "^2.4.3",
+    "ts-node": "^10.9.1"
   }
 }
