--- a/chatbot_app_lexart/backend/package.json
+++ b/chatbot_app_lexart/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
