--- a/chatbot_app_lexart/frontend/package.json
+++ b/chatbot_app_lexart/frontend/package.json
@@ -22,7 +22,8 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
