--- a/chatbot_app_lexart/frontend/package.json
+++ b/chatbot_app_lexart/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "papaparse": "^5.4.1",
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.8",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "typescript": "^5.2.2"
